fixed profile spacing

--- a/Resources/style.css
+++ b/Resources/style.css
@@ -73,7 +73,7 @@ header nav{
 #projects h2 {
     
     /* border: black 1px solid; */
-    grid-column: 2/4;
+    grid-column: 1/4;
     grid-row: 1/2;
     text-align: center;
     padding-top: 1.5rem;
